// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LiveshoppingWidget /> should not render the widget without any data 1`] = `""`;

exports[`<LiveshoppingWidget /> should render the widget with a slider for multiple products 1`] = `
<div
  className={
    Object {
      "data-css-9a70pf": "",
    }
  }
  data-test-id="liveShoppingWidget"
>
  <ProductListTypeProvider
    meta={null}
    subType="widgets"
    type="liveshopping"
  >
    <Swiper
      additionalModules={null}
      aria-hidden={false}
      autoPlay={false}
      className={null}
      classNames={Object {}}
      controls={false}
      disabled={false}
      indicators={true}
      interval={3000}
      loop={true}
      maxIndicators={null}
      onSlideChange={null}
    >
      <SwiperSlide
        className={null}
        key="1234"
      >
        <ProductListEntryProvider
          productId="1234"
        >
          <LiveshoppingItem
            productId="1234"
          />
        </ProductListEntryProvider>
      </SwiperSlide>
      <SwiperSlide
        className={null}
        key="1235"
      >
        <ProductListEntryProvider
          productId="1235"
        >
          <LiveshoppingItem
            productId="1235"
          />
        </ProductListEntryProvider>
      </SwiperSlide>
    </Swiper>
  </ProductListTypeProvider>
</div>
`;

exports[`<LiveshoppingWidget /> should render the widget with no slider for one product 1`] = `
<div
  className={
    Object {
      "data-css-9a70pf": "",
    }
  }
  data-test-id="liveShoppingWidget"
>
  <ProductListTypeProvider
    meta={null}
    subType="widgets"
    type="liveshopping"
  >
    <ProductListEntryProvider
      key="1234"
      productId="1234"
    >
      <LiveshoppingItem
        productId="1234"
      />
    </ProductListEntryProvider>
  </ProductListTypeProvider>
</div>
`;
